--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.fragment:fragment:1.3.0-alpha08'
+    androidTestImplementation 'androidx.test:rules:1.3.1-alpha02'
 }
